# dwnld_mngr

./: CMakeLists.txt  README.md
include/: DownloadManager.hpp  DownloadTask.hpp  HttpDownloader.hpp
src/: DownloadManager.cpp  DownloadTask.cpp  HttpDownloader.cpp  main.cpp
